<resources>
    <string name="app_name">Radio</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sing_up_with">Sing up with</string>

    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>

    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>







    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="volume">Volume</string>
    <string name="text_for_favorites_layout">You have not added any channels to your Favorites yet.</string>
    <string name="recently_stations">Recently stations:</string>
    <string name="toast_remove_favorites">has been removed from your favorites</string>
    <string name="toast_add_favorites">has been added to your favorites</string>
    <string name="search_mock">Search list of world radio stations</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="registration">Registration</string>
    <string name="or">OR</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="search">Search</string>
    <string name="get_random_station">Get Random station</string>
    <string name="no_recent_channels">No recent channels</string>
    <string name="you_re_lucky">You\'re lucky!</string>
    <string name="countries">Countries</string>
    <string name="genres">Styles</string>
    <string name="favorites">Favorites</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="prev">Previous</string>
    <string name="next">next</string>


</resources>
