<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:ignore="contentDescription"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="40dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_password"
            android:background="@drawable/shape_for_auth_field"
            android:inputType="text"
            android:hint="@string/username"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_sign_in"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_for_auth_field"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_for_btn_sing_in_register"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_sign_in"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_for_btn_sing_in_register"
            android:text="@string/registration" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_registration"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:text="@string/or" />


        <TextView
            android:id="@+id/tv_sign_up_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_or"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/sing_up_with"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btn_reg_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sign_up_with"
            android:layout_toStartOf="@+id/tv_sign_up_with"
            android:background="@drawable/shape_for_sm_image"
            app:srcCompat="@drawable/ic_facebook"
            android:inputType="textPassword"/>

        <ImageButton
            android:id="@+id/btn_reg_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sign_up_with"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_for_sm_image"
            app:srcCompat="@drawable/ic_google_plus"
            tools:ignore="contentDescription"/>


        <ImageButton
            android:id="@+id/btn_reg_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sign_up_with"
            android:layout_toEndOf="@+id/tv_sign_up_with"
            android:background="@drawable/shape_for_sm_image"
            app:srcCompat="@drawable/ic_twitter"
            tools:ignore="contentDescription"/>

    </RelativeLayout>

</FrameLayout>