<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/get_recently_station"
            tools:ignore="contentDescription"/>

        <Button
            android:id="@+id/btn_get_random_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/get_random_station" />


    </FrameLayout>

    <TextView
        android:id="@+id/tv_recently_stations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/recently_stations" />

    <FrameLayout
        android:id="@+id/container_for_recent_recycler"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/tv_recent_mock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_recent_channels"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorBackground" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_recently_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

</LinearLayout>



